Supply information at project root-level with `minimal` extension