@@ -21,7 +21,7 @@ fun Project.ktlint(vararg rulesets: Any) {
         ktlint {
             invoke(ktlint()) {
                 attributes {
-                    attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named<Bundling>(Bundling.EXTERNAL))
+                    attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
                 }
             }
             rulesets.forEach { invoke(it) }
@@ -50,6 +50,7 @@ fun Project.ktlint(vararg rulesets: Any) {
             classpath = ktlint.get()
             mainClass.set("com.pinterest.ktlint.Main")
             args("-F", "src/**/*.kt")
+            jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
         }
     }
 }
